# computer-use-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  STRUCTURE.md  config.example.yaml  config.yaml  pyproject.toml  pytest.ini  requirements.txt  test_task.py  write_summary.py
.agent/memory/: MEMORY.md
.agents/memory/: MEMORY.md
.githooks/: pre-commit
.workflow/20260613-execute-plan/: acceptance-review-final.md  acceptance-review.md  retrospective.md  skill-feedback-followup.md  skill-feedback.md  state.json
computer_use/: __main__.py  audit_store.py  cli.py  composite.py  config.py  core.py  doctor.py  guidance.py  launcher.py  mcp_server.py  review.py  review_report.py  runner.py  runtime_permissions.py  safety.py  snapshot.py  task_session.py  tool_contract.py  trace.py  ui_automation.py
computer_use/tools/: __init__.py  schemas.py
docs/: CURRENT.md  agent-usage.md  api.md  audit-checklist.md  audit-log.md  deployment.md  overview.md  pitfalls.md
docs/plans/: README.md
docs/refs/: skillos-notes.md
scripts/: agent_links.py  audit.py  changelog.py  curator.py  requirements.txt  sync_global_skill.py
tests/: manual_test_checklist.md  test_audit_store.py  test_cli.py  test_composite.py  test_config.py  test_core.py  test_distribution_readiness.py  test_launcher.py  test_mcp_prompts.py  test_mcp_server.py  test_review.py  test_review_report.py  test_runner.py  test_runtime_permissions.py  test_safety.py  test_smoke_script.py  test_snapshot.py  test_task_session.py  test_trace.py  test_ui_automation.py
tools/: smoke_mcp_client.py
(+210 files in other folders)
