[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "computer-use"
version = "0.1.0"
description = "Local Computer Use MCP Server for Windows GUI automation"
requires-python = ">=3.11"
dependencies = [
    "pyautogui>=0.9.54",
    "mss>=9.0.1",
    "Pillow>=10.0.0",
    "uiautomation>=2.0.20",
    "mcp>=1.0.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["computer_use*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
